--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -2,15 +2,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/val"
     tools:context=".MenuActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="100">
+
+        <Button
+            android:id="@+id/buttonGche"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="20"
+            android:typeface="serif"
+            android:textColor="#F6E2E2"
+            android:background="@android:color/transparent"
+            android:text="@string/bgche" />
+
+        <Button
+            android:id="@+id/buttonMilieu"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="60"
+            android:typeface="serif"
+            android:textColor="#F6E2E2"
+            android:background="@android:color/transparent"
+            android:text="@string/bmilieu" />
+
+        <Button
+            android:id="@+id/buttonDrt"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="20"
+            android:typeface="serif"
+            android:textColor="#F6E2E2"
+            android:background="@android:color/transparent"
+            android:text="@string/bdroit" />
+        
+<!--         <ImageButton -->
+<!--         android:id="@+id/buttonDrt" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="match_parent" -->
+<!--         android:src="@drawable/buttonLeft" -->
+<!--         android:background="@android:color/transparent" -->
+<!--         android:text="@string/bdroit"  -->
+<!--         android:layout_weight="20"/> -->
+ 
+    </LinearLayout>
 
 </RelativeLayout>
