--- a/res/layout/liste_actualites.xml
+++ b/res/layout/liste_actualites.xml
@@ -2,13 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fuchsia"
+    android:background="@color/white"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/id_actuView_texteAccueil"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Liste d&apos;actualités" />
+        android:gravity="center"
+        android:text="Liste actu"
+        android:textColorHint="@color/grisSombre1" />
+
+    <ListView
+        android:id="@+id/id_actuView_listeView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
