--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="blue">#0000FF</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
+    <color name="grisSombre1">#797979</color>
 
 </resources>
