--- a/res/layout/liste_poi.xml
+++ b/res/layout/liste_poi.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
+
+    <Button
+        android:id="@+id/id_listePOI_boutonMenu"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_above="@+id/id_poi_listeView"
+        android:layout_alignParentRight="true"
+        android:background="@color/grisSombre1"
+        android:text="|||" />
 
     <TextView
         android:id="@+id/id_poiView_texteAccueil"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_toLeftOf="@+id/id_listePOI_boutonMenu"
+        android:background="@color/gray"
         android:gravity="center"
         android:text="Liste POI"
         android:textColorHint="@color/grisSombre1" />
@@ -16,7 +28,47 @@
     <ListView
         android:id="@+id/id_poi_listeView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/id_poiView_texteAccueil" 
+        android:layout_toLeftOf="@+id/id_listePOI_lineaireLayoutMenu" 
+        >
+
     </ListView>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/id_listePOI_lineaireLayoutMenu"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/id_poiView_texteAccueil"
+        android:background="@color/grisSombre1"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:layout_weight=".70" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nom :"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <EditText
+            android:id="@+id/id_listePOI_textEditRecherche"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/id_listePOI_boutonValiderRecherche"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Rechercher" />
+
+    </LinearLayout>
+
+</RelativeLayout>
