--- a/res/layout/vue_realite_augmentee.xml
+++ b/res/layout/vue_realite_augmentee.xml
@@ -1,14 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/teal"
-    android:orientation="vertical" >
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/relativeLayout1"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent" >
 
-    <Button
-        android:id="@+id/button1"
+    <SurfaceView
+		android:id="@+id/cameraPreview"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent" />
+    
+    <TextView
+        android:id="@+id/vueRA_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="vue sur réalité augmentée / boussole" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/vueRA_contentView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/vueRA_text" >
+
+    </RelativeLayout>
+
+</RelativeLayout>
